# sms-spam-detector

./: .replit  LICENSE  Notebook.ipynb  README.md  app.py  model.pkl  pyproject.toml  requirements.txt  vectorizer.pkl
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
